--- a/README
+++ b/README
@@ -5,12 +5,13 @@ I did some snippets in order to make my life easier and I believe that it can he
 
 Documentation
 ------
-If you want an overview of all jQuery and javascript snippets available, take a look into the documentation http://www.danielcamargo.com.br/stuffs/gedit-snippets-jquery/documentation.php. 
+If you want an overview of all jQuery and javascript snippets available, take a look into the documentation http://danielcamargo.com/website/jquery-snippets-to-gedit-documentation/
 
 Install 
 ------
-$ git clone git://github.com/pererinha/gedit-snippet-jquery.git
-$ cp gedit-snippets/snippets/*.xml ~/.gnome2/gedit/snippets 
+$ git clone git://github.com/pererinha/gedit-snippet-jquery.git 
+$ cp gedit-snippet-jquery/*.xml ~/.gnome2/gedit/snippets/
+// thanks to @bgturner
 
 More information about Gedit Snippets
 ------
