--- a/README
+++ b/README
@@ -5,7 +5,7 @@ I did some snippets in order to make my life easier and I believe that it can he
 
 Documentation
 ------
-If you want an overview of all jQuery and javascript snippets available, take a look into the documentation http://danielcamargo.com/website/jquery-snippets-to-gedit-documentation/
+If you want an overview of all jQuery and javascript snippets available, take a look into the documentation http://pererinha.posterous.com/jquery-snippets-to-gedit-documentation
 
 Install 
 ------
